--- a/models/baseline.ipynb
+++ b/models/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -29,11 +29,16 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import RepeatedKFold\n",
     "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import roc_curve\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "from sklearn.metrics import RocCurveDisplay"
+    "from sklearn.metrics import RocCurveDisplay\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import make_scorer"
    ]
   },
   {
@@ -845,6 +850,51 @@
    ],
    "source": [
     "tree.score(testX, testY)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'cv': RepeatedKFold(n_repeats=12, n_splits=6, random_state=None),\n 'error_score': nan,\n 'estimator__ccp_alpha': 0.0,\n 'estimator__class_weight': None,\n 'estimator__criterion': 'gini',\n 'estimator__max_depth': None,\n 'estimator__max_features': None,\n 'estimator__max_leaf_nodes': None,\n 'estimator__min_impurity_decrease': 0.0,\n 'estimator__min_samples_leaf': 1,\n 'estimator__min_samples_split': 2,\n 'estimator__min_weight_fraction_leaf': 0.0,\n 'estimator__random_state': None,\n 'estimator__splitter': 'best',\n 'estimator': DecisionTreeClassifier(),\n 'n_iter': 10,\n 'n_jobs': None,\n 'param_distributions': {'criterion': ['entropy', 'gini'],\n  'splitter': ['random', 'best'],\n  'min_weight_fraction_leaf': [0.0, 0.0025, 0.005, 0.0075, 0.01, 0.5, 1],\n  'min_samples_split': [50, 100, 150, 200, 250, 500, 1000],\n  'min_samples_leaf': [25, 50, 75, 100, 125, 250, 500],\n  'min_impurity_decrease': [0.0, 0.0005, 0.005, 0.05, 0.1, 0.15, 0.2],\n  'max_leaf_nodes': [10, 15, 20, 25, 30, 35, 40, 45, 50, 100],\n  'max_features': ['auto', 0.95, 0.9, 0.85, 0.8, 0.75, 0.7],\n  'max_depth': [18, 24, 32, 40, 50, 64]},\n 'pre_dispatch': '2*n_jobs',\n 'random_state': None,\n 'refit': 'f1_score',\n 'return_train_score': True,\n 'scoring': {'accuracy': make_scorer(accuracy_score),\n  'recall': make_scorer(recall_score),\n  'f1': make_scorer(f1_score)},\n 'verbose': 0}"
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optimization\n",
+    "DT = DecisionTreeClassifier()\n",
+    "param_dist = {'criterion': ['entropy', 'gini'],\n",
+    "              'splitter': ['random', 'best'],\n",
+    "              'min_weight_fraction_leaf': [0.0, 0.0025, 0.005, 0.0075, 0.01, 0.5, 1],\n",
+    "              'min_samples_split': [50, 100, 150, 200, 250, 500, 1000],\n",
+    "              'min_samples_leaf': [25, 50, 75, 100, 125, 250, 500],\n",
+    "              'min_impurity_decrease': [0.0, 0.0005, 0.005, 0.05, 0.10, 0.15, 0.2],\n",
+    "              'max_leaf_nodes': [10, 15, 20, 25, 30, 35, 40, 45, 50, 100],\n",
+    "              'max_features': ['auto', 0.95, 0.90, 0.85, 0.80, 0.75, 0.70],\n",
+    "              'max_depth': [18, 24, 32, 40, 50, 64]\n",
+    "              }\n",
+    "\n",
+    "RGS_DT = RandomizedSearchCV(estimator=DT,\n",
+    "                            param_distributions=param_dist,\n",
+    "                            cv=cv,\n",
+    "                            scoring={'accuracy': make_scorer(accuracy_score),\n",
+    "                                     'recall': make_scorer(recall_score),\n",
+    "                                     'f1': make_scorer(f1_score)},\n",
+    "                            refit='f1_score',\n",
+    "                            return_train_score=True,\n",
+    "                            n_iter=10)\n",
+    "RGS_DT.get_params()"
    ],
    "metadata": {
     "collapsed": false,
