--- a/models/baseline.ipynb
+++ b/models/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2943,8 +2943,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'PolynomialFeatures' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_13504/4157460708.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mpoly\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mPolynomialFeatures\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdegree\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mpoly_tb_f_trainX\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpoly\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfit_transform\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtb_f_trainX\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'PolynomialFeatures' is not defined"
+     ]
+    }
+   ],
    "source": [
     "poly = PolynomialFeatures(degree=2)\n",
     "poly_tb_f_trainX = poly.fit_transform(tb_f_trainX)"
@@ -2958,9 +2970,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 4.45 GiB for an array with shape (180000, 3321) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mMemoryError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_8604/1258460404.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mpoly_tb_f_testX\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpoly\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtransform\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtb_f_testX\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\preprocessing\\_polynomial.py\u001B[0m in \u001B[0;36mtransform\u001B[1;34m(self, X)\u001B[0m\n\u001B[0;32m    419\u001B[0m             \u001B[1;31m# Do as if _min_degree = 0 and cut down array after the\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    420\u001B[0m             \u001B[1;31m# computation, i.e. use _n_out_full instead of n_output_features_.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 421\u001B[1;33m             XP = np.empty(\n\u001B[0m\u001B[0;32m    422\u001B[0m                 \u001B[0mshape\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mn_samples\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_n_out_full\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdtype\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mX\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdtype\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0morder\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0morder\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    423\u001B[0m             )\n",
+      "\u001B[1;31mMemoryError\u001B[0m: Unable to allocate 4.45 GiB for an array with shape (180000, 3321) and data type float64"
+     ]
+    }
+   ],
+   "source": [
+    "poly_tb_f_testX = poly.transform(tb_f_testX)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "xgb_base.fit(poly_tb_f_trainX, tb_f_trainY, eval_metric='auc', eval_set=[(poly_tb_f_testX, tb_f_testY)], verbose=True)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
